<resources>
    <string name="app_name">week3</string>
    <string name="error_fill_email">Please fill the email address</string>
    <string name="error_fill_phone">Please fill the phone number</string>
    <string name="error_validate_email">Please fill the input with a valid email address</string>
    <string name="termsAndConds"><![CDATA[I accept T&C]]></string>
    <string name="submit">Submit</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="scrollText">A view group that allows the view hierarchy placed within it to be scrolled. Scroll view may have only one direct child placed within it. To add multiple views within the scroll view, make the direct child you add a view group, for example LinearLayout, and place additional views within that LinearLayout.\n\n
        A view group that allows the view hierarchy placed within it to be scrolled. Scroll view may have only one direct child placed within it. To add multiple views within the scroll view, make the direct child you add a view group, for example LinearLayout, and place additional views within that LinearLayout.\n\n
    A view group that allows the view hierarchy placed within it to be scrolled. Scroll view may have only one direct child placed within it. To add multiple views within the scroll view, make the direct child you add a view group, for example LinearLayout, and place additional views within that LinearLayout.\n\n
    A view group that allows the view hierarchy placed within it to be scrolled. Scroll view may have only one direct child placed within it. To add multiple views within the scroll view, make the direct child you add a view group, for example LinearLayout, and place additional views within that LinearLayout.\n\n
    A view group that allows the view hierarchy placed within it to be scrolled. Scroll view may have only one direct child placed within it. To add multiple views within the scroll view, make the direct child you add a view group, for example LinearLayout, and place additional views within that LinearLayout.\n\n</string>
    <string name="spinnerText">Spinner Example</string>
</resources>
